--- a/BlockTrip_BE/blocktrip/src/main/resources/templates/index.html
+++ b/BlockTrip_BE/blocktrip/src/main/resources/templates/index.html
@@ -30,6 +30,17 @@
     <input type="text" id="destDate" name="destDate" placeholder="도착날짜를 입력하세요">
     <button type="submit">검색</button>
 </form>
-depart, dest, departDate, destDate
+<hr>
+<form action="/hotel" method="post">
+    <label for="place">장소</label>
+    <input type="text" id="place" name="place" placeholder="지역을 입력하세요">
+    <label for="checkin">체크인</label>
+    <input type="text" id="checkin" name="checkin" placeholder="체크인 날짜를 입력하세요">
+    <label for="checkout">체크아웃</label>
+    <input type="text" id="checkout" name="checkout" placeholder="체크아웃 날짜를 입력하세요">
+    <label for="option">옵션</label>
+    <input type="text" id="option" name="option" placeholder="원하는 옵션을 입력하세요(가격, 추천순 등등..)">
+    <button type="submit">검색</button>
+</form>
 </body>
 </html>
