feat: 항공권, 추천 호텔 크롤링 기능 추가

--- a/BlockTrip_BE/blocktrip/src/main/resources/templates/index.html
+++ b/BlockTrip_BE/blocktrip/src/main/resources/templates/index.html
@@ -30,5 +30,17 @@
     <input type="text" id="destDate" name="destDate" placeholder="도착날짜를 입력하세요">
     <button type="submit">검색</button>
 </form>
+<hr>
+<form action="/hotel" method="post">
+    <label for="location">지역</label>
+    <input type="text" id="location" name="location" placeholder="지역을 입력하세요">
+    <label for="checkin">체크인</label>
+    <input type="text" id="checkin" name="checkin" placeholder="체크인 날짜를 입력하세요[yyyy-MM-dd]">
+    <label for="checkout">체크아웃</label>
+    <input type="text" id="checkout" name="checkout" placeholder="체크아웃 날짜를 입력하세요[yyyy-MM-dd]">
+    <label for="option">옵션</label>
+    <input type="text" id="option" name="option" placeholder="사용자 옵션을 입력하세요">
+    <button type="submit">검색</button>
+</form>
 </body>
 </html>
